[package]
name = "example_xtensa_esp32"
version = "0.3.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
martos = { git = "https://github.com/IvanArkhipov1999/Martos.git" }
esp-hal = "0.20.0"
esp-backtrace = { version = "0.14.1", features = ["esp32", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.11.0", features = ["esp32"] }
esp-wifi = { version = "0.9.1" }

[features]
default = ["esp-hal/esp32", "esp-backtrace/esp32", "esp-println/esp32"]
